# itmo-is-ml-parsing-2024-5-sem

./: Cargo.toml  flake.nix
data/: data.arff  data.tsv
src/: convert.rs  lib.rs  main.rs  parse.rs  request.rs  storage.rs
src/convert/: entry.rs  flags.rs
src/parse/: anilist.rs  arff.rs  entry.rs  file.rs  jimaku.rs
src/parse/anilist/: entry.rs  format.rs  genre.rs  source.rs  status.rs
src/parse/jimaku/: entry.rs  file.rs
