[package]
name = "ml_parser"
version = "0.1.0"
edition = "2021"

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
all = { level = "deny", priority = -1 }
pedantic = { level = "warn", priority = -1 }
min_ident_chars = "warn"
missing_panics_doc = "allow"
missing_errors_doc = "allow"

[dependencies]
headless_chrome = "1.0.15"
reqwest = "0.12.7"
scraper = "0.20.0"
serde = {version = "1.0.210", features = ["serde_derive"] }
serde_json = "1.0.128"
tokio = { version = "1.40.0", features = ["full"] }
