[package]
name = "ml_parser"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "tsv_to_arff"
path = "src/bin/tsv_to_arff.rs"

[[bin]]
name = "arff_to_csv"
path = "src/bin/arff_to_csv.rs"

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
all = { level = "deny", priority = -1 }
pedantic = { level = "warn", priority = -1 }
min_ident_chars = "warn"
missing_panics_doc = "allow"
missing_errors_doc = "allow"

[dependencies]
anyhow = "1.0.89"
chrono = "0.4.38"
csv = "1.3.0"
headless_chrome = "1.0.15"
iso8601-duration = { version = "0.2.0", features = ["chrono"] }
reqwest = "0.12.7"
scraper = "0.20.0"
serde = { version = "1.0.210", features = ["serde_derive"] }
serde_json = "1.0.128"
tokio = { version = "1.40.0", features = ["full"] }
